# dialga

./: .gitignore  Cargo.toml  LICENSE  README.md  dialga  dialga.c  hashing.c  hashing.h  index.txt  init.c  init.h  main.c  make.sh  makefile  package-lock.json  test.c
.github/workflows/: makefile.yml
docs/: api-examples.md  docs_01.md  docs_02.md  docs_03.md  docs_06.md  docs_07.md  index.md  markdown-examples.md
docs/.vitepress/: config.mts
src/: add.rs  compress.rs  hash.rs  init.rs  main.rs  restore.rs  status.rs
