[package]
name = "dialga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
flate2 = "1.0.30"
base64 = "0.22.1"

[[bin]]
name = "dialga"
[profile.release]
opt-level = 3

#backtrace for dev builds
[profile.dev]
debug = true
env = { RUST_BACKTRACE = 1 }
